# libdadi

./: .cproject  .project  CMakeLists.txt  ChangeLog  README
Testing/: CMakeLists.txt
Testing/src/: CMakeLists.txt
Testing/src/attributes/: CMakeLists.txt  DADIAttrTests.cc
Testing/src/commandline/: CMakeLists.txt  DADICommandLineTests.cc
Testing/src/common/: TestRunner.cc
Testing/src/configfile/: CMakeLists.txt  DADIConfigFileTests.cc  DADIConfigMgrTests.cc  DADIConfigTests.cc  DADIConfigTestsFixtures.hh
Testing/src/cori/: CMakeLists.txt  DADICoriTests.cc
Testing/src/logging/: CMakeLists.txt  DADIFileChannelTests.cc  DADILoggingTests.cc  DADIMessageTests.cc  DADIMultiChannelTests.cc
Testing/src/plugin/: CMakeLists.txt  DADIPlugginTests.cc  DADIPluginInfoTests.cc  DADIPluginTests.cc  DADIPluginTestsFixture.hh  IPerson.hh  PersonA.cc  PersonB.cc
Testing/test_files/: CMakeLists.txt
Testing/test_files/cfg/: CMakeLists.txt  configfile.cfg.in  infoConfigFile.cfg.in
Testing/test_files/include/: CMakeLists.txt  testconfig.h.in
Testing/test_files/samples/: CMakeLists.txt  attr_sample01.ini  attr_sample01.json  attr_sample01.nfo  attr_sample01.xml
cmake/: FindDBLATEX.cmake  FindDL.cmake  FindDadi.cmake  FindLOGSERVICE.cmake  FindOmniORB.cmake  UseDBLATEX.cmake  UseOmniORB.cmake  dadiTestingMacros.cmake  plugins.cmake
doc/: CMakeLists.txt  Doxyfile.in  authentification-specifications.tex  authentification.docbook  sysfera.sty
include/: Attributes.hh  Config.hh  ConfigMgr.hh  IPlugin.hh  Loader.hh  Logging.hh  Options.hh  PluginInfo.hh  Registry.hh  SharedLibrary.hh  SharedLibraryImpl_posix.hh  SharedLibraryImpl_win32.hh  Singleton.hh  config.hh  dadi-config.hh.in  dadi.hh  options.hh  singleton.hh
include/Exception/: All.hh  Attributes.hh  Base.hh  Parameters.hh  Plugins.hh
include/Logging/: ArchiveStrategy.hh  Channel.hh  ConsoleChannel.hh  FileChannel.hh  FileStrategy.hh  LogServiceChannel.hh  Logger.hh  Message.hh  MultiChannel.hh  NullChannel.hh  PurgeStrategy.hh  RotateStrategy.hh  SyslogChannel.hh
include/dadi/: Attributes.hh  Config.hh  ConfigMgr.hh  CoriMgr.hh  ICori.hh  IPlugin.hh  Loader.hh  Logging.hh  Options.hh  PluginInfo.hh  Registry.hh  SharedLibrary.hh  Singleton.hh  dadi-config.hh.in  dadi.hh
include/dadi/Exception/: All.hh  Attributes.hh  Base.hh  Parameters.hh  Plugins.hh
include/dadi/Logging/: ArchiveStrategy.hh  Channel.hh  ConsoleChannel.hh  FileChannel.hh  FileStrategy.hh  LogServiceChannel.hh  Logger.hh  Message.hh  MultiChannel.hh  NullChannel.hh  PurgeStrategy.hh  RotateStrategy.hh  SyslogChannel.hh
include/dadi/detail/: Parsers.hh
include/detail/: Parsers.hh
proto/: README  proto.cpp
samples/: CMakeLists.txt
samples/simple-commandline/: CMakeLists.txt  main.cc
samples/simple-configfile/: CMakeLists.txt  main.cc  test.config
samples/simple-cori/: CMakeLists.txt  main.cc
samples/simple-logging/: CMakeLists.txt  main.cc
samples/simple-plugin/: CMakeLists.txt  IPerson.hh  PersonA.cc  main.cc
scripts/: copyright.txt  release_script.sh
src/: Attributes.cc  CMakeLists.txt  ConfigMgr.cc  Loader.cc  Options.cc  PluginInfo.cc  Registry.cc  SharedLibrary.cc  SharedLibraryImpl_posix.cc  SharedLibraryImpl_posix.hh  SharedLibraryImpl_win32.cc  SharedLibraryImpl_win32.hh  options.cc
src/cori/: CMakeLists.txt  CoriMgr.cc  PilgrimCori.cc  PilgrimCori.xml.in  SigarCori.cc  SigarCori.xml.in
src/logging/: ArchiveStrategy.cc  Channel.cc  ConsoleChannel.cc  FileChannel.cc  FileStrategy.cc  LogServiceChannel.cc  Logger.cc  Message.cc  MultiChannel.cc  NullChannel.cc  PurgeStrategy.cc  RotateStrategy.cc  SyslogChannel.cc
test/src/: CMakeLists.txt  TestRunner.cpp  dadi_test.cpp
tests/: CMakeLists.txt  PersonA.cc  main.cc
tests/simple-commandline/: CMakeLists.txt  main.cc
tests/simple-configfile/: CMakeLists.txt
tests/simple-logging/: CMakeLists.txt  main.cc
tests/simple-plugin/: CMakeLists.txt  IPerson.hh  PersonA.cc  PersonA.xml.in  main.cc
utils/: FindDadi.cmake  dadi.pc.in
